<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_login_reg_top_section">
        <ImageView
            android:id="@+id/imageViewBackRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:layout_margin="@dimen/marginTopFieldLoginScreen"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!--user's full name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserNameRegistrationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/editTextUserNameRegistration"
                    android:layout_width="@dimen/widthEditTextLoginScreen"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:hint="@string/userName"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:nextFocusDown="@+id/editTextUserEmailRegistration"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkBodyBackground"
                    android:textSize="@dimen/sizeTextLoginScreen" />
            </android.support.design.widget.TextInputLayout>
            <!--user's email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserEmailRegistrationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTopFieldRegistrationScreen">

                <EditText
                    android:id="@+id/editTextUserEmailRegistration"
                    android:layout_width="@dimen/widthEditTextLoginScreen"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:hint="@string/emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:nextFocusDown="@+id/editTextUserMobileRegistration"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkBodyBackground"
                    android:textSize="@dimen/sizeTextLoginScreen" />
            </android.support.design.widget.TextInputLayout>
            <!--user's mobile number -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserMobileRegistrationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTopFieldRegistrationScreen">

                <EditText
                    android:id="@+id/editTextUserMobileRegistration"
                    android:layout_width="@dimen/widthEditTextLoginScreen"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:hint="@string/userMobileNumber"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="10"
                    android:nextFocusDown="@+id/editTextUserPasswordRegistration"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkBodyBackground"
                    android:textSize="@dimen/sizeTextLoginScreen" />
            </android.support.design.widget.TextInputLayout>
            <!--User' password -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserPasswordRegistrationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTopFieldRegistrationScreen">

                <EditText
                    android:id="@+id/editTextUserPasswordRegistration"
                    android:layout_width="@dimen/widthEditTextLoginScreen"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:nextFocusDown="@+id/editTextUserCPasswordRegistration"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkBodyBackground"
                    android:textSize="@dimen/sizeTextLoginScreen" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserPasswordCRegistrationInput"
                android:layout_width="@dimen/widthEditTextLoginScreen"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTopFieldRegistrationScreen">

                <EditText
                    android:id="@+id/editTextUserCPasswordRegistration"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:hint="@string/confirmPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDarkBodyBackground"
                    android:textSize="@dimen/sizeTextLoginScreen" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/registrationSubmitButtonId"
                android:layout_width="@dimen/widthEditTextLoginScreen"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopFieldRegistrationScreen"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sizeTextLoginScreen" />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>